[package]
name = "vdom"
version = "0.1.0"
authors = ["cipepser <respepic@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.wasm-bindgen]
version = "0.2.51"

[dependencies.web-sys]
version = "0.3.4"
features = [
    "Document",
    "Element",
    "Node",
    "Text",
]